# AlexLens

./: .gitignore  AlexLens  AlexLens.cbp  AlexLens.pro  CMakeLists.txt  README.md  TransferLearning.py  helpform.ui  mainwindow.ui  statisticform.ui
AlexLens_autogen/: mocs_compilation.cpp
Icon/: icon.qrc
Model/Model_Dummy/: Model_Dummy
includes/: Manager.h  inputpanel.h  mainwindow.h  parameterpanel.h  ui_mainwindow.h
includes/DataAugmentationModule/: DataAugmentation.h
includes/EventModule/: IEventInvoker.h
includes/GUIModule/: IObserver.h  IView.h  Subject.h  helpform.h  helppanel.h  inputpanel.h  mainwindow.h  outputclassifypanel.h  parameterpanel.h  statisticform.h  ui_helpform.h  ui_mainwindow.h  ui_statisticform.h
includes/ImageEditorModule/: IImageEditor.h
includes/ManagerModule/: Manager.h
includes/MathModule/: Math.h
includes/NeuralNetModule/: INeuralNet.h
includes/PlatformModule/: IPlatformManager.h  Mode.h
includes/TrainingModule/: ITraining.h
resources/alexnet/: alexnet.mapping  alexnet.xml  alexnet_labels.txt  alexnet_log.txt
resources/pse_dataset_test/: pse_dataset_test_labels.txt  pse_dataset_test_log.txt
src/: CMakeLists.txt  InputPanel.cpp  Manager.cpp  Manager.h  Mode.cpp  main.cpp  mainwindow.cpp  outputclassifypanel.cpp  parameterpanel.cpp
src/DataAugmentationModule/: DataAugmentation.cpp
src/EventModule/: DeleteHandler.cpp  DeleteHandler.h  EndHandler.cpp  EndHandler.h  EventInvoker.cpp  EventInvoker.h  Events.h  Handler.cpp  Handler.h  ModSelectHandler.cpp  ModSelectHandler.h  NNSelectHandler.cpp  NNSelectHandler.h  NewInputHandler.cpp  NewInputHandler.h  OKHandler.cpp  OKHandler.h  ParameterUpdateHandler.cpp  ParameterUpdateHandler.h  RunHandler.cpp  RunHandler.h  RunTrainingHandler.cpp  RunTrainingHandler.h  SaveHandler.cpp  SaveHandler.h  ShowResultHandler.cpp  ShowResultHandler.h
src/Exceptions/: ReadException.h  StickException.h
src/GUIModule/: ClassifyFrame.cpp  ClassifyFrame.h  ErrorFrame.cpp  ErrorFrame.h  HelpFrame.cpp  HelpFrame.h  IObserver.h  InputPanel.cpp  InputPanel.h  MainFrame.cpp  MainFrame.h  OutputClassifyPanel.h  OutputTrainingPanel.cpp  OutputTrainingPanel.h  ParameterPanel.h  SaveDeleteTrainingFrame.cpp  SaveDeleteTrainingFrame.h  StatisticFrame.cpp  StatisticFrame.h  StatisticHelpPanel.cpp  StatisticHelpPanel.h  Subject.cpp  Subject.h  TrainingFrame.cpp  TrainingFrame.h  helpform.cpp  helpform.h  helpform.ui  helppanel.cpp  helpwindow.h  inputpanel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputclassifypanel.cpp  outputclassifypanel.h  parameterpanel.cpp  parameterpanel.h  statisticform.cpp  statisticform.h  (+2 more)
src/ImageEditorModule/: ChannelAdaptation.cpp  ChannelAdaptation.h  Crop.cpp  Crop.h  ImageEditor.cpp  ImageEditor.h  ImageOperation.cpp  ImageOperation.h  Mirror.cpp  Mirror.h  OperationType.h  Pad.cpp  Pad.h  Resize.cpp  Resize.h  Rotate.cpp  Rotate.h
src/ManagerModule/: Executor.cpp  Executor.h  IManager.h  Interpreter.cpp  Interpreter.h  Manager.cpp  Manager.h  PreProcessor.cpp  PreProcessor.h  main.cpp
src/MathModule/: Math.cpp  MathException.h  Matrix.cpp  Matrix.h  Skalar.cpp  Skalar.h  Tensor.cpp  Tensor.h  TensorObject.cpp  TensorObject.h  Vektor.cpp  Vektor.h
src/NeuralNetModule/: AlexNet.cpp  AlexNet.h  AlexNetWeightParser.cpp  AlexNetWeightParser.h  Conv2D.cpp  Conv2D.h  Conv2DLayer.cpp  Conv2DLayer.h  FC.cpp  FC.h  FCLayer.cpp  FCLayer.h  GPUSGeMM.cpp  GPUSGeMM.h  INeuralNet.h  Layer.cpp  Layer.h  LayerType.h  MaxPool2D.cpp  MaxPool2D.h  NeuralNet.cpp  NeuralNet.h  NeuralNetException.h  NormLayer.cpp  NormLayer.h  Normalization.cpp  Normalization.h  PoolLayer.cpp  PoolLayer.h  ReLU.cpp  ReLU.h  ReLULayer.cpp  ReLULayer.h  Shape.cpp  Shape.h  Softmax.cpp  Softmax.h  TrainableLayer.cpp  TrainableLayer.h  kernel.cl
src/PlatformModule/: ASICPlatform.cpp  ASICPlatform.h  CPUPlatform.cpp  CPUPlatform.h  CPUPlatformTorch.cpp  CPUPlatformTorch.h  GPUPlatform.cpp  GPUPlatform.h  Mode.cpp  Mode.h  ModeUtil.cpp  ModeUtil.h  OpenCL.h  OpenVINO.h  Platform.cpp  Platform.h  PlatformManager.cpp  PlatformManager.h  PlatformStatistic.cpp  PlatformStatistic.h  PlatformTraining.cpp  PlatformTraining.h  PlatformType.h
src/TrainingModule/: ITraining.h  LearningRule.cpp  LearningRule.h  NoRule.cpp  NoRule.h  Test.cpp  Test.h  Training.cpp  Training.h  TrainingElement.cpp  TrainingElement.h  TrainingSet.cpp  TrainingSet.h  TransferLearning.cpp  TransferLearning.h  TransferLearning.py  Validation.cpp  Validation.h
test/: CMakeLists.txt  main.cpp  test_Conv2D.cpp  test_Executor.cpp  test_HelpForm.cpp  test_Manager.cpp  test_MaxPool2D.cpp  test_Normalisation.cpp  test_ReLU.cpp  test_Softmax.cpp  test_StatisticForm.cpp  testmain.cpp
